Added simple logo styling and link styling

--- a/wiki-rebuild.html
+++ b/wiki-rebuild.html
@@ -6,11 +6,20 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
+    <div class="logo">
+      <img src="img/enwiki.png" class="wiki_logo" alt="Wiki Logo">
+    </div>
+
     <div class="row">
       <div class="col-lg-2">
-        <img src="img/enwiki.png" alt="Wiki Logo">
-        <ul>
-          <li>something</li>
+        <ul class="side_nav_ul">
+          <li><a href="#">Main page</a></li>
+          <li><a href="#">Contents</a></li>
+          <li><a href="#">Featured content</a></li>
+          <li><a href="#">Current event</a></li>
+          <li><a href="#">Random article</a></li>
+          <li><a href="#">Donate to Wikipedia</a></li>
+          <li><a href="#">Wikipedia store</a></li>
         </ul>
 
       </div>
