Completed Wiki Side panel. Added upper most links, no styling yet

--- a/wiki-rebuild.html
+++ b/wiki-rebuild.html
@@ -6,10 +6,118 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="logo">
-      <img src="img/enwiki.png" class="wiki_logo" alt="Wiki Logo">
+    <div class="wrapper">
+      <div class="row">
+        <div class="col-lg-2">
+          <div class="side_panel">
+            <img src="img/enwiki.png" id="wiki_logo" alt="Wiki Logo">
+            <ul class="side_ul">
+              <li><a href="#">Main page</a></li>
+              <li><a href="#">Contents</a></li>
+              <li><a href="#">Featured content</a></li>
+              <li><a href="#">Current event</a></li>
+              <li><a href="#">Random article</a></li>
+              <li><a href="#">Donate to Wikipedia</a></li>
+              <li><a href="#">Wikipedia store</a></li>
+              <h3 class="side_ul_tags">Interaction</h3>
+              <li><a href="#">Help</a></li>
+              <li><a href="#">About Wikipedia</a></li>
+              <li><a href="#">Community portal</a></li>
+              <li><a href="#">Recent changes</a></li>
+              <li><a href="#">Contact pages</a></li>
+              <h3 class="side_ul_tags">Tools</h3>
+              <li><a href="#">What links here</a></li>
+              <li><a href="#">Related changes</a></li>
+              <li><a href="#">Upload file</a></li>
+              <li><a href="#">Special pages</a></li>
+              <li><a href="#">Parmanent link</a></li>
+              <li><a href="#">Page information</a></li>
+              <li><a href="#">Wikipedia item</a></li>
+              <h3 class="side_ul_tags">Print/export</h3>
+              <li><a href="#">What links here</a></li>
+              <li><a href="#">Related changes</a></li>
+              <li><a href="#">Upload file</a></li>
+              <h3 class="side_ul_tags">In other projects</h3>
+              <li><a href="#">What links here</a></li>
+              <li><a href="#">Related changes</a></li>
+              <li><a href="#">Upload file</a></li>
+              <li><a href="#">Special pages</a></li>
+              <li><a href="#">Parmanent link</a></li>
+              <li><a href="#">Page information</a></li>
+              <li><a href="#">Wikipedia item</a></li>
+              <li><a href="#">What links here</a></li>
+              <li><a href="#">Related changes</a></li>
+              <li><a href="#">Upload file</a></li>
+              <li><a href="#">Special pages</a></li>
+              <li><a href="#">Parmanent link</a></li>
+              <h3 class="side_ul_tags">Languages</h3>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">place_holder</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-10">
+          <ul>
+            <li class="d-flex justify-content-end">Not logged in</li>
+            <li class="d-flex justify-content-baseline">Talk</li>
+            <li class="d-flex justify-content-around">Contributions</li>
+            <li class="d-flex justify-content-around">Create account</li>
+            <li class="d-flex justify-content-around">Log in</li>
+
+          </ul>
+
+        </div>
+      </div>
     </div>
 
+<!--
+    <div class="logo">
+      <img src="img/enwiki.png" id="wiki_logo" alt="Wiki Logo">
+    </div>
     <div class="row">
       <div class="col-lg-2">
         <ul class="side_nav_ul">
@@ -23,7 +131,7 @@
         </ul>
 
       </div>
-    </div>
+    </div> -->
 
 
 
