Finished upper most links. Started work on main content body

--- a/wiki-rebuild.html
+++ b/wiki-rebuild.html
@@ -101,68 +101,47 @@
           </div>
         </div>
         <div class="col-lg-10">
-          <ul>
-            <li class="d-flex justify-content-end">Not logged in</li>
-            <li class="d-flex justify-content-baseline">Talk</li>
-            <li class="d-flex justify-content-around">Contributions</li>
-            <li class="d-flex justify-content-around">Create account</li>
-            <li class="d-flex justify-content-around">Log in</li>
-
+          <ul class="d-flex justify-content-end hdr_nav" id="headr_nav">
+            <li>Not logged in</li>
+            <li ><a href="#">Talk</a></li>
+            <li><a href="#">Contributions</a></li>
+            <li><a href="#">Create account</a></li>
+            <li><a href="#">Log in</a></li>
           </ul>
 
+          <div class="container">
+            <div class="d-flex align-items-end" id="mn_left">
+              <ul class="nav nav-tabs" id="main_nav">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Main Page</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Talk</a>
+                </li>
+              </ul>
+            </div>
+
+
+              <!-- <div class="d-flex align-items-end" id="mn_left">
+                <li class="nav-item float-right">
+                  <a class="nav-link" href="#">Read</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">View source</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">View history</a>
+                </li>
+                <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                </form>
+              </div>
+            </ul> -->
+
+            ss
+          </div>
         </div>
       </div>
     </div>
-
-<!--
-    <div class="logo">
-      <img src="img/enwiki.png" id="wiki_logo" alt="Wiki Logo">
-    </div>
-    <div class="row">
-      <div class="col-lg-2">
-        <ul class="side_nav_ul">
-          <li><a href="#">Main page</a></li>
-          <li><a href="#">Contents</a></li>
-          <li><a href="#">Featured content</a></li>
-          <li><a href="#">Current event</a></li>
-          <li><a href="#">Random article</a></li>
-          <li><a href="#">Donate to Wikipedia</a></li>
-          <li><a href="#">Wikipedia store</a></li>
-        </ul>
-
-      </div>
-    </div> -->
-
-
-
-
-
-
-
-    <!-- <div class="container">
-        <div class="col-lg-10">
-          <ul class="nav nav-tabs space">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Main Page</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Talk</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="#">Read</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="#">View source</a>
-            </li>
-            <li class="nav-item ">
-              <a class="nav-link" href="#">View history</a>
-            </li>
-            <form class="form-inline my-2 my-lg-0">
-              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
-          </ul>
-        </div>
-      </div> -->
   </body>
 </html>
