Updated all none encoded languages

--- a/wiki-rebuild.html
+++ b/wiki-rebuild.html
@@ -13,7 +13,7 @@
             <img src="img/enwiki.png" id="wiki_logo" alt="Wiki Logo">
             <ul class="side_ul">
               <li><a href="#">Main page</a></li>
-              <li><a href="#">Contents</a></li>
+              <li><a href="#">Contens</a></li>
               <li><a href="#">Featured content</a></li>
               <li><a href="#">Current event</a></li>
               <li><a href="#">Random article</a></li>
@@ -34,69 +34,70 @@
               <li><a href="#">Page information</a></li>
               <li><a href="#">Wikipedia item</a></li>
               <h3 class="side_ul_tags">Print/export</h3>
-              <li><a href="#">What links here</a></li>
-              <li><a href="#">Related changes</a></li>
-              <li><a href="#">Upload file</a></li>
+              <li><a href="#">Create a book</a></li>
+              <li><a href="#">Download PDF</a></li>
+              <li><a href="#">Printable version</a></li>
               <h3 class="side_ul_tags">In other projects</h3>
-              <li><a href="#">What links here</a></li>
-              <li><a href="#">Related changes</a></li>
-              <li><a href="#">Upload file</a></li>
-              <li><a href="#">Special pages</a></li>
-              <li><a href="#">Parmanent link</a></li>
-              <li><a href="#">Page information</a></li>
-              <li><a href="#">Wikipedia item</a></li>
-              <li><a href="#">What links here</a></li>
-              <li><a href="#">Related changes</a></li>
-              <li><a href="#">Upload file</a></li>
-              <li><a href="#">Special pages</a></li>
-              <li><a href="#">Parmanent link</a></li>
+              <li><a href="#">Wikimedia Commons</a></li>
+              <li><a href="#">MediaWiki</a></li>
+              <li><a href="#">Meta-Wiki</a></li>
+              <li><a href="#">Wikispecials</a></li>
+              <li><a href="#">Wikibooks</a></li>
+              <li><a href="#">Wikidata</a></li>
+              <li><a href="#">Wikinews</a></li>
+              <li><a href="#">Wikiquote</a></li>
+              <li><a href="#">Wkisource</a></li>
+              <li><a href="#">Wikiversity</a></li>
+              <li><a href="#">Wikivoyage</a></li>
+              <li><a href="#">Wiktionary</a></li>
               <h3 class="side_ul_tags">Languages</h3>
               <li><a href="#">place_holder</a></li>
               <li><a href="#">place_holder</a></li>
+              <li><a href="#">Bosanski</a></li>
+              <li><a href="#">Catala</a></li>
+              <li><a href="#">Cestina</a></li>
+              <li><a href="#">Dansk</a></li>
+              <li><a href="#">Deutsch</a></li>
+              <li><a href="#">Eesti</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">Espanol</a></li>
+              <li><a href="#">Esperanto</a></li>
+              <li><a href="#">Eskara</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">Francais</a></li>
+              <li><a href="#">Galego</a></li>
+              <li><a href="#">place_holder</a></li>
+              <li><a href="#">Harvatski</a></li>
+              <li><a href="#">BahasaIndonesia</a></li>
+              <li><a href="#">Italino</a></li>
               <li><a href="#">place_holder</a></li>
               <li><a href="#">place_holder</a></li>
+              <li><a href="#">Latvesu</a></li>
+              <li><a href="#">Lietuviu</a></li>
+              <li><a href="#">Magyar</a></li>
+              <li><a href="#">Bahasa Melayu</a></li>
+              <li><a href="#">Nederlands</a></li>
               <li><a href="#">place_holder</a></li>
+              <li><a href="#">Norsk</a></li>
+              <li><a href="#">Norsk nynoksk</a></li>
+              <li><a href="#">Polski</a></li>
+              <li><a href="#">Portugues</a></li>
+              <li><a href="#">Romana</a></li>
               <li><a href="#">place_holder</a></li>
+              <li><a href="#">Simple Englih</a></li>
+              <li><a href="#">Slovencina</a></li>
+              <li><a href="#">Slovenscina</a></li>
+              <li><a href="#">...../ srski</a></li>
+              <li><a href="#">Srpskohvatski/
+              .........</a></li>
+              <li><a href="#">Suomi</a></li>
+              <li><a href="#">Svenska</a></li>
               <li><a href="#">place_holder</a></li>
+              <li><a href="#">Turkce</a></li>
               <li><a href="#">place_holder</a></li>
+              <li><a href="#">Tieng Viet</a></li>
               <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
-              <li><a href="#">place_holder</a></li>
+              <li><a href="#">Complete list</a></li>
             </ul>
           </div>
         </div>
