Added span styles to welcome banner

--- a/wiki-rebuild.html
+++ b/wiki-rebuild.html
@@ -149,11 +149,9 @@
                       <h4 id="welcome_title">
                         Welcome to <a href="#">Wikipedia</a>,
                       </h4>
-                        <p id="wl_1">
-                          the <a href="#">free</a> <a href="#">encylopedia</a> that <a href="#">anyone can edit</a>.
-                        </p>
-                        <p id="wl_2">
-                          <a href="#">5,512,756</a> articles in <a href="#">English</a>
+                        <p>
+                          <span id="#wl_1">the <a href="#">free</a> <a href="#">encylopedia</a> that <a href="#">anyone can edit</a>.</span>
+                          <span style="#wl_2"><a href="#">5,512,756</a> articles in <a href="#">English</a></span>
                         </p>
                       </div>
                     <!-- </h4> -->
