--- a/wiki-rebuild.html
+++ b/wiki-rebuild.html
@@ -141,6 +141,12 @@
             </div>
 
             <!-- Welcome to Wiki -->
+            <!--
+                Correct sizing ny adding a small grid
+                e.x.
+                    Welcome title would by a col of 4
+                    and the links would be a col of 8
+            -->
             <div class="row">
               <div class="col-lg-12">
                 <div class="card bg-light">
